# oz_django

./: .coverage  pyproject.toml  test.sh
.github/workflows/: ci.yml
djangoProject1/: asgi.py  settings.py  urls.py  wsgi.py
tabom/: models.py
tabom/apis/v1/: like_router.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py
tabom/schema/: like_request.py  like_response.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_like_service.py
